# zephyr-can-converter-unit

./: CMakeLists.txt  README.md  ozone.jdebug  prj.conf  system-view-project.SVPrj
.github/workflows/: build.yml
.run/: GDB via Debug Server.run.xml
.sysview/: 2026-02-15.SVDat
app/: CMakeLists.txt  prj.conf
app/src/: can_converter.c  can_converter.h  main.c
boards/hydrogreen/can_conventer/: Kconfig.can_converter  board.yml  can_conventer.yaml  can_conventer_defconfig  can_converter.dts
boards/hydrogreen/can_converter/: board.yml  can_converter.dts  can_converter.yaml  can_converter_defconfig
hmi_parser/: hmi_parser_zephyr.hpp  indexed_type_map.hpp  struct_fields.hpp  utils.hpp
peripherals/: adc.h  can.c  can.h  counter.h  gpio.c  gpio.h  pwm.c  pwm.h  rs485.c  rs485.h  status_led.c  test_button.c  test_button.h  uart.c  uart.h
proto/: master.options  master.pb  master.proto  master_helpers.h
src/: can_converter.c  can_converter.cpp  can_converter.h  can_converter.hpp  can_converter_can.c  can_converter_can.cpp  can_converter_can.h  can_converter_can.hpp  can_converter_can_send.c  can_converter_can_send.cpp  can_converter_can_send.h  can_converter_can_send.hpp  can_converter_dfu.c  can_converter_dfu.h  can_converter_frames.c  can_converter_frames.h  can_converter_rs485.c  can_converter_rs485.cpp  can_converter_rs485.h  can_converter_rs485.hpp  cobs.c  cobs.h  main.c  main.cpp
tools/: can_test.py  dfu_can.py  flash_app.py  flash_bootloader.py  master_pb2.py  rs485_tester.py
